--- a/database/languages/golang.json
+++ b/database/languages/golang.json
@@ -1,8 +1,8 @@
 [
   {
-  "name": "Test",
-  "description": "Backend Links to be added",
-  "url": "https://google.com",
+  "name": "Youtube Link",
+  "description": "",
+  "url": "https://youtube.com/playlist?list=PLu0W_9lII9agwh1XjRt242xIpHhPT2llg&si=Z9yRt78yoDeIvzOj",
   "category": "backend",
   "subcategory": "golang"
   }
