--- a/database/languages/javascript.json
+++ b/database/languages/javascript.json
@@ -1,9 +1,16 @@
 [
   {
-  "name": "Test",
-  "description": "Backend Links to be added",
-  "url": "https://google.com",
+  "name": "Previous Year Question Paper 1",
+  "description": "",
+  "url": "https://drive.google.com/file/d/1WEM7sv_BM8XnmfHESYrDO7TalS4v6dX_/view?usp=drive_link",
   "category": "backend",
   "subcategory": "javascript"
+  },
+  {
+    "name": "Previous Year Question Paper 2",
+    "description": "",
+    "url": "https://docs.google.com/document/d/1he_eHAt1B-JrFeVXPjPEbkBdsESXK__t/edit?usp=drive_link&ouid=116291353832606067497&rtpof=true&sd=true",
+    "category": "backend",
+    "subcategory": "javascript"
   }
 ]
