--- a/database/languages/python.json
+++ b/database/languages/python.json
@@ -1,8 +1,8 @@
 [
         {
-        "name": "Test",
-        "description": "Backend Links to be added",
-        "url": "https://google.com",
+        "name": "Assignment 1",
+        "description": "",
+        "url": "https://drive.google.com/file/d/1eZ6GkkQdvLgK5DZR9bMulDMNReZQ0FQz/view?usp=drive_link",
         "category": "backend",
         "subcategory": "python"
         }
